crates/biome_cli/tests/snapshots/main_cases_help/explain_help.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome explain --help
```

# Emitted Messages

```block
Prints documentation for a lint rule or the path to the daemon server log directory.
### Examples
```shell
biome explain noDebugger
```
```shell
biome explain daemon-logs
```

Usage: explain NAME

Available positional items:
    NAME        `NAME` is a lint rule name or `daemon-logs`.

Available options:
    -h, --help  Prints help information

```
