crates/biome_cli/tests/snapshots/main_cases_help/init_help.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome init --help
```

# Emitted Messages

```block
Creates a default Biome configuration file in the current working directory.

Usage: init [--jsonc] [--git]

Available options:
        --jsonc  Creates `biome.jsonc` instead of `biome.json`.
        --git    Enables Git VCS integration and respects Git ignore files.
    -h, --help   Prints help information

```
