crates/biome_cli/tests/snapshots/main_cases_help/lint_help.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --help
```

# Emitted Messages

```block
Runs the linter on the specified files.

Usage: lint [--write] [--unsafe] [--suppress] [--reason=STRING] [--only=<GROUP|RULE|DOMAIN|PLUGIN>
]... [--skip=<GROUP|RULE|DOMAIN|PLUGIN>]... [--staged] [--changed] [--since=REF] [--profile-rules] [
--watch] [PATH]...

Options that change how the JSON parser behaves.
        --json-parse-allow-comments=<true|false>  Controls whether comments are allowed in files
                              parsed as JSON. When unset, Biome follows the file type's default
                              behavior. An explicit value overrides that behavior, except that
                              `biome.jsonc` always allows comments.
        --json-parse-allow-trailing-commas=<true|false>  Controls whether trailing commas are
                              allowed in files parsed as JSON. When unset, Biome follows the file
                              type's default behavior. An explicit value overrides that behavior,
                              except that `biome.jsonc` always allows trailing commas.

Options that change how the CSS parser behaves.
        --css-parse-css-modules=<true|false>  Enables CSS Modules-specific syntax such as `:local`,
                              `:global`, `composes`, and `@value`. When unset, Biome enables this
                              syntax automatically for files whose names end in `.module.css` or
                              `.module.scss; otherwise, it defaults to `false`. Enable it explicitly
                              when CSS Module files use another naming convention.
        --css-parse-tailwind-directives=<true|false>  Enables parsing Tailwind CSS 4.0 directives
                              and functions, including `@theme`, `@utility`, `@variant`, `@source`,
                              and `@apply`. Defaults to `false`.

Options that change how the Markdown parser behaves
        --md-parse-frontmatter=<true|false>  Enables parsing frontmatter at the start of the file.
                              Defaults to `false`.

Configures how Biome integrates with a version control system.
        --vcs-enabled=<true|false>  Enables or disables version-control integration. Defaults to
                              `false`. Enabling integration requires `vcs.clientKind` to be set.
        --vcs-client-kind=<git>  Selects the version-control client. Currently, only `git` is
                              supported.
        --vcs-use-ignore-file=<true|false>  Controls whether Biome applies patterns from
                              `.gitignore`, Git's local `.git/info/exclude`, and supported `.ignore`
                              files, including nested ignore files. Patterns in the root ignore file
                              are resolved from `vcs.root`. Patterns in nested ignore files are
                              resolved from the directory containing that file. Defaults to `false`.
        --vcs-root=PATH       Sets the directory where Biome looks for version-control files. A
                              relative value is resolved from the directory containing the current
                              configuration file, while an absolute path is used directly.
                              Defaults to the directory containing `biome.json` or `biome.jsonc`. If
                              no configuration is found, Biome uses the current working directory.
                              If neither directory is available, Biome disables version control
                              integration and emits a diagnostic.
        --vcs-default-branch=BRANCH  Sets the base branch used by `--changed` when `--since` is not
                              provided. If neither this option nor `--since` is set, commands using
                              `--changed` fail because Biome cannot determine the comparison base.

The file handling configuration.
        --files-max-size=NUMBER  The maximum source-file size in bytes. Biome skips larger files and
                              emits a warning diagnostic. Defaults to `1 MiB`.
        --files-ignore-unknown=<true|false>  Prevents Biome from emitting diagnostics for
                              unrecognized file types. Defaults to `false`.

Linter options specific to the JavaScript linter
        --javascript-linter-enabled=<true|false>  Enables or disables the linter for JavaScript and
                              languages that extend it.

Linter options specific to the JSON linter
        --json-linter-enabled=<true|false>  Enables or disables the linter for JSON and languages
                              that extend it.

Options that change how the CSS linter behaves.
        --css-linter-enabled=<true|false>  Enables or disables the linter for CSS.

Options that change how the GraphQL linter behaves.
        --graphql-linter-enabled=<true|false>  Enables or disables the linter for GraphQL.

Options that change how the Markdown linter behaves
        --md-linter-enabled=<true|false>  Control the linter for Markdown files.

These options are available to many commands and control general CLI behavior, diagnostics, and
output.
        --colors=<off|force>  Controls ANSI styling: `off` disables it, while `force` enables it
                              even when the output does not appear to support ANSI escapes.
        --use-server          Connects to a running instance of the Biome daemon server.
        --verbose             Shows additional diagnostic details and lists the files that were
                              processed or modified.
        --config-path=PATH    Sets the path to the configuration file or the directory where Biome
                              should search for `biome.json` or `biome.jsonc`. This option disables
                              the default configuration file resolution.
                              [env:BIOME_CONFIG_PATH: N/A]
        --max-diagnostics=<none|NUMBER>  Limits the number of diagnostics displayed. Use `none` to
                              remove the limit.
                              [default: 20]
        --skip-parse-errors   Skips files containing syntax errors instead of emitting an error
                              diagnostic.
        --no-errors-on-unmatched  Does not emit an error when no files are processed.
        --error-on-warnings   Exits with an error status if any warning diagnostics are emitted.
  [--reporter=<default|concise|summary|json|json-pretty|github|gitlab|junit|checkstyle|rdjson|sarif>
  ] [--reporter-file=PATH]
        --reporter=
    <default|concise|summary|json|json-pretty|github|gitlab|junit|checkstyle|rdjson|sarif>  Changes
                              how diagnostics and the run summary are written.
                              [default: default]
        --reporter-file=PATH  Writes the associated reporter's output to `PATH`. Without
                              `--reporter`, it writes the default reporter's output.

        --diagnostic-level=<info|warn|error>  Sets the minimum diagnostic severity to display:
                              `info`, `warn`, or `error`. For example, `--diagnostic-level=error`
                              displays only error-level diagnostics.
                              [default: info]

Options that control internal CLI and daemon server logging.
        --log-file=PATH       For file-processing commands, writes internal CLI logs to this file
                              instead of standard output.
                              [env:BIOME_LOG_FILE: N/A]
        --log-prefix-name=STRING  When starting the daemon server, sets the file name prefix used
                              for rotated log files.
                              [env:BIOME_LOG_PREFIX_NAME: N/A]
                              [default: server.log]
        --log-path=PATH       When starting the daemon server, sets the directory where log files
                              are stored.
                              [env:BIOME_LOG_PATH: N/A]
                              [default: <BIOME_DIR>/biome-logs]
        --log-level=<none|tracing|debug|info|warn|error>  For file-processing commands, sets the
                              internal CLI logging level to `tracing`, `debug`, `info`, `warn`,
                              `error`, or `none`.
                              [env:BIOME_LOG_LEVEL: N/A]
                              [default: none]
        --log-kind=<pretty|compact|json>  For file-processing commands, selects the internal CLI log
                              format: `pretty`, `compact`, or `json`.
                              [env:BIOME_LOG_KIND: N/A]
                              [default: pretty]

Available positional items:
    PATH                      The optional `PATH` arguments accept one or more paths to files or
                              directories. If omitted, Biome lints files in the current working
                              directory.

Available options:
        --write               Applies safe lint fixes.
        --unsafe              Allows `--write` or `--fix` to apply unsafe lint fixes.
        --fix                 Alias for `--write`.
        --suppress            Writes comment suppressions for lint rule violations instead of
                              applying rule fixes.
        --reason=STRING       Adds an explanation to suppressions created by `--suppress`. This flag
                              requires `--suppress`.
        --only=<GROUP|RULE|DOMAIN|PLUGIN>  Runs only the given lint rule, rule group, or domain. If
                              a rule's severity is `off`, Biome sets it to `error` for a recommended
                              rule or `warn` otherwise. The `plugin` group runs only analyzer
                              plugins.
                              Example:
                              ```shell
                              biome lint --only=correctness/noUnusedVariables --only=suspicious --only=test --only=plugin
                              ```
        --skip=<GROUP|RULE|DOMAIN|PLUGIN>  Skips the given lint rule, rule group, or domain by
                              setting the affected rules to `off`. This option takes precedence over
                              `--only`. The `plugin` group skips analyzer plugins.
                              Example:
                              ```shell
                              biome lint --skip=correctness/noUnusedVariables --skip=suspicious --skip=project --skip=plugin
                              ```
        --stdin-file-path=PATH  Reads code from standard input and writes the processed code to
                              standard output.
                              Biome uses `PATH` to select settings and determine the input type from
                              its extension. Virtual paths don't need to exist or belong to the
                              project. They bypass `files.includes` and VCS ignore checks.
                              Example:
                              ```shell
                              echo 'let a;' | biome lint --stdin-file-path=file.js --write
                              ```
        --staged              Lints only staged files. This option is intended for local use.
        --changed             Lints only files with committed changes compared to the configured
                              `vcs.defaultBranch` or the base reference specified by `--since`.
                              Staged and unstaged changes are not included. This option is intended
                              for CI.
        --since=REF           Sets the base reference used by `--changed`, overriding
                              `vcs.defaultBranch`. Requires `--changed`.
        --profile-rules       Reports how long each rule takes to run. It excludes the time spent
                              preparing the analysis, such as building the semantic model.
        --profile-type-inference  Enables type-inference profiling output, grouped and ranked by
                              source file.
        --watch               After the initial run, watches the selected paths and reprocesses
                              files modified afterward.
    -h, --help                Prints help information

```
