crates/biome_cli/tests/snapshots/main_cases_help/lsp_proxy_help.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lsp-proxy --help
```

# Emitted Messages

```block
Ensures that the Biome daemon server is running, then forwards Language Server Protocol messages
between the daemon server and standard input and output.

Usage: lsp-proxy [--log-prefix-name=STRING] [--log-path=PATH] [--log-level=
<none|tracing|debug|info|warn|error>] [--log-kind=<pretty|compact|json>] [--watcher-kind=
<polling|recommended|none>] [--watcher-polling-interval=NUMBER]

Options that control internal CLI and daemon server logging.
        --log-file=PATH  For file-processing commands, writes internal CLI logs to this file instead
                         of standard output.
                         [env:BIOME_LOG_FILE: N/A]
        --log-prefix-name=STRING  When starting the daemon server, sets the file name prefix used
                         for rotated log files.
                         [env:BIOME_LOG_PREFIX_NAME: N/A]
                         [default: server.log]
        --log-path=PATH  When starting the daemon server, sets the directory where log files are
                         stored.
                         [env:BIOME_LOG_PATH: N/A]
                         [default: <BIOME_DIR>/biome-logs]
        --log-level=<none|tracing|debug|info|warn|error>  For file-processing commands, sets the
                         internal CLI logging level to `tracing`, `debug`, `info`, `warn`, `error`,
                         or `none`.
                         [env:BIOME_LOG_LEVEL: N/A]
                         [default: none]
        --log-kind=<pretty|compact|json>  For file-processing commands, selects the internal CLI log
                         format: `pretty`, `compact`, or `json`.
                         [env:BIOME_LOG_KIND: N/A]
                         [default: pretty]

Options that control the Biome daemon server's file watcher.
        --watcher-kind=<polling|recommended|none>  Selects how the daemon server detects file
                         changes. `recommended` uses the operating system's recommended watcher,
                         `polling` periodically checks for changes, and `none` disables watching.
                         [env:BIOME_WATCHER_KIND: N/A]
                         [default: recommended]
        --watcher-polling-interval=NUMBER  Sets how often the polling watcher checks for file
                         changes, in milliseconds. This setting applies only when
                         `--watcher-kind=polling`.
                         [env:BIOME_WATCHER_POLLING_INTERVAL: N/A]
                         [default: 2000]

Available options:
    -h, --help           Prints help information

```
