crates/biome_cli/tests/snapshots/main_cases_help/upgrade_help.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome upgrade --help
```

# Emitted Messages

```block
Upgrades Biome to the latest stable version.
This command upgrades the current Biome binary based on how it was installed:
- **Standalone**: Upgrades a standalone binary in place to the latest stable version.
- **Homebrew**: If Biome was installed with Homebrew, this command runs `brew upgrade biome`.
Set `BIOME_DISTRIBUTION` to `npm`, `homebrew`, or `standalone` to override automatic detection.
This command cannot update Biome binaries installed through npm. Update `@biomejs/biome` with your
package manager instead.

Usage: upgrade 

Available options:
    -h, --help  Prints help information

```
